rules/ensure_network_policy_configured_in_labels/test/success_pod_cilium_empty_selector/input/cilium_network_policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: baseline
  namespace: default
spec:
  endpointSelector: {}
  ingress:
  - fromEndpoints:
    - {}
  egress:
  - toEndpoints:
    - {}
