rules/ensure_network_policy_configured_in_labels/test/success_pod_cilium_empty_selector/input/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-cilium-pod
  namespace: default
  labels:
    app: my-cilium-pod
spec:
  containers:
  - name: nginx
    image: nginx:latest
